--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,8 @@ services:
         - IMAGE_NAME=yasserettm/FrontEnd:${BUILD_NUMBER}
     ports:
       - 3000:3000
+    depends_on:
+      - backend
   backend:
     build:
       context: ./BackEnd
